Added more pictures and pictures work for WeatherUnderground now. Also added weather summary

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
     		<div class="col-md-7" style="border: 2px solid black">
     			<img id="icon_img" src="/images/sunny.png" class="img-circle" style="width: 20%; height: 20%; display: inline; padding: 20px">
     			<p id="curr_weather" style="display: inline; font-size: 20px"></p>
+    			<p id="summary"></p>
     		</div>
     		<div class="col-md-3">
     			<h3> <span class="label label-default">Choose an API:</span></h3>
