Added comments and some more pictures

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <h1>Displaying weather for New York, New York</h1>
+    <h1>Displaying Weather for New York, New York</h1>
 
     <div class="container">
     	<div class="row">
